Removed old email address and updated README

--- a/resources/hsmenu.css
+++ b/resources/hsmenu.css
@@ -2,7 +2,7 @@
  * CSS file for the top of the page
  * Menu stuff and alert bar are defined here
   * 
- * @author Paul O'Connor paul.oconnor11@student.dit.ie
+ * @author Paul O'Connor 
  * @date 1st Decemeber 20009
  */
 /*Top Menu*/
