--- a/resources/nui.css
+++ b/resources/nui.css
@@ -2,7 +2,7 @@
  * Main css file for the main part of the site
  * All hosts, services etc are defined here
  * 
- * @author Paul O'Connor paul.oconnor11@student.dit.ie
+ * @author Paul O'Connor 
  * @date 1st Decemeber 20009
  */
 
