--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,7 @@
 /**
  * Contains all the other css styles for non specific stuff
  * 
- * @author Paul O'Connor paul.oconnor11@student.dit.ie
+ * @author Paul O'Connor 
  * @date 1st Decemeber 20009
  */
 
